<resources>
    <string name="app_name">AppProjektMemoryApp</string>

    <!-- Fra Firebase -->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="CreateNoteHeadline">Create New Note</string>
    <string name="TimeStampDefaultText">Current Time</string>
    <string name="LocationDefaultText">Current Location</string>
    <string name="NoteDescriptionDefaultText">Note Description:</string>
    <string name="TakePictureBtnTxt">Add a Picture</string>
    <string name="CancelBtnText">Cancel</string>
    <string name="OkBtnText">OK</string>
    <string name="EditPictureBtnTxt">Change Picture</string>
    <string name="EditNoteHeadline">Edit Note</string>
    <string name="CreateQuickNoteTxt">Enter Quicknote Here...</string>
    <string name="RemindMeLaterCheckBoxTxt">Remind me later</string>
    <string name="CreateQuicknoteButtonTxt">Create Quicknote</string>
    <string name="currentLocationReady">CURRENT_LOCATION_READY</string>
    <string name="notesReady">NOTES_READY</string>
    <string name="myNotesReady">MY_NOTES_READY</string>
    <string name="notificationTitle">Memory Service</string>
    <string name="notificationText">Your note has been saved.</string>
    <string name="firstNoteName">First Note</string>
    <string name="firstNoteDescription">Your very first note!</string>
    <string name="firstNoteLocation">"Heaven!"</string>

    <string name="NavigationHeaderTitle">"TITLE + ICON?"</string>
    <string name="DrawerItemHome">Home</string>
    <string name="DrawerItemSettings">Settings</string>
    <string name="DrawerItemNotes">My Notes</string>
    <string name="DrawerItemProfile">My profile</string>
    <string name="DrawerItemMap">Map stuff</string>

    <string name="NoteCreationFailed">Failed to create note.</string>
    <string name="LocationPermissionsSuccess">Location-services was succesfully enabled</string>
    <string name="CameraPermissionsSuccess">Camera-services was succesfully enabled</string>
    <string name="LocationPermissionsFailed">Something went wrong with enabling Location-services</string>
    <string name="CameraPermissionsFailed">Something went wrong with enabling Camera-services</string>
    <string name="LocationPermissionsEncourage">The App will not be that much fun if you do not enable location-services</string>
    <string name="CameraPermissionsEncourage">You will not be able to add awesome pictures if you do not enable Camera-services</string>
    <string name="StoragePermissionsSuccess">External-storage was succesfully enabled</string>
    <string name="StoragePermissionsFailed">Something went wrong with enabling External-storage</string>
    <string name="StoragePermissionsEncourage">You will not be able to save your noted if you do not enable External-storage</string>


    <string name="googleMapsApiKey">AIzaSyCWkDTUPbsjbFlETjI8kBpbjOyhNbRjDq0</string>
    <string name="CreateNoteBtnTxt">Create New Note</string>
    <string name="ExpandMapTxt">Expand Map</string>
    <string name="DeleteBtnTxt">Delete Note</string>
    <string name="ReturnBtnTxt">Return</string>

    <string name="NoteNameErrorTxt">You need to give your Note a Name!</string>
    <string name="NoteDescriptionErrorTxt">You did not give your note a description, are you sure? Go to edit to add one!</string>
    <string name="NameHeadlineTxt">Note Name:</string>
    <string name="TimeStampHeadlineTxt">Time:</string>
</resources>
